--- a/Framework/test-output/old/Suite/methods-alphabetical.html
+++ b/Framework/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c49fae">  <td>19/07/10 10:47:04</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">&gt;&gt;setup</td> 
+<tr bgcolor="c49fae">  <td>19/07/23 16:04:14</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/07/10 10:47:03</td>   <td>-316</td> <td title="&gt;&gt;BaseClass.setupFile()[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">&gt;&gt;setupFile</td> 
+<tr bgcolor="c49fae">  <td>19/07/23 16:04:13</td>   <td>-524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod(org.testng.ITestResult)[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">&lt;&lt;TearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
+<tr bgcolor="8df37b">  <td>19/07/23 16:04:07</td>   <td>-7084</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TestLogin()[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">TestLogin</td> 
+  <td>main@107241811</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>19/07/23 16:03:57</td>   <td>-17153</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>19/07/23 16:03:56</td>   <td>-17832</td> <td title="&gt;&gt;BaseClass.setupFile()[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">&gt;&gt;setupFile</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
 </table>
