--- a/Framework/test-output/old/Default suite/methods.html
+++ b/Framework/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c49fae">  <td>19/07/23 15:35:01</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupFile()[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">&gt;&gt;setupFile</td> 
+<tr bgcolor="c49fae">  <td>19/07/24 10:37:50</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupFile()[pri:0, instance:com.website.testcases.LoginWithWrongCred@75f9eccc]">&gt;&gt;setupFile</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/07/23 15:35:02</td>   <td>571</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">&gt;&gt;setup</td> 
+<tr bgcolor="c49fae">  <td>19/07/24 10:37:50</td>   <td>683</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.website.testcases.LoginWithWrongCred@75f9eccc]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
-<tr bgcolor="8df37b">  <td>19/07/23 15:35:24</td>   <td>23098</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TestLogin()[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">TestLogin</td> 
+<tr bgcolor="8df37b">  <td>19/07/24 10:38:03</td>   <td>13440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginWithWrongCred.TestLoginWithWrongCed()[pri:1, instance:com.website.testcases.LoginWithWrongCred@75f9eccc]">TestLoginWithWrongCed</td> 
   <td>main@107241811</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/07/23 15:35:37</td>   <td>36198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod(org.testng.ITestResult)[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">&lt;&lt;TearDownMethod</td> 
+<tr bgcolor="c49fae">  <td>19/07/24 10:38:15</td>   <td>25039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod(org.testng.ITestResult)[pri:0, instance:com.website.testcases.LoginWithWrongCred@75f9eccc]">&lt;&lt;TearDownMethod</td> 
 <td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/07/23 15:35:38</td>   <td>36740</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">&lt;&lt;TearDown</td> 
+<tr bgcolor="c49fae">  <td>19/07/24 10:38:15</td>   <td>25624</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.website.testcases.LoginWithWrongCred@75f9eccc]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
 </table>
