--- a/Framework/test-output/index.html
+++ b/Framework/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.website.testcases.LoginWithWrongCred" class="method navigator-link" hash-for-method="TestLoginWithWrongCed">TestLoginWithWrongCed</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.website.testcases.LoginTest" class="method navigator-link" hash-for-method="TestLogin">TestLogin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.website.testcases.LoginWithWrongCred</span>
+              <span class="class-name">com.website.testcases.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TestLoginWithWrongCed">
-                  </a> <!-- TestLoginWithWrongCed -->
-                  <span class="method-name">TestLoginWithWrongCed</span>
+                  <a name="TestLogin">
+                  </a> <!-- TestLogin -->
+                  <span class="method-name">TestLogin</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/tmp/testng-eclipse-1792940643/testng-customsuite.xml</span>
+            <span class="header-content">/tmp/testng-eclipse--676650344/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.website.testcases.LoginWithWrongCred&quot;/&gt;
+      &lt;class name=&quot;com.website.testcases.LoginTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TestLoginWithWrongCed')
-data.setCell(0, 2, 'com.website.testcases.LoginWithWrongCred')
-data.setCell(0, 3, 11598);
+data.setCell(0, 1, 'TestLogin')
+data.setCell(0, 2, 'com.website.testcases.LoginTest')
+data.setCell(0, 3, 6551);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,26 +219,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.website.testcases.LoginWithWrongCred</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.website.testcases.LoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">setupFile</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">setup</span>
-                <span class="method-start">687 ms</span>
+                <span class="method-start">677 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">TestLoginWithWrongCed</span>
-                <span class="method-start">13443 ms</span>
+                <span class="method-name">TestLogin</span>
+                <span class="method-start">13444 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">TearDownMethod([TestResult name=TestLoginWithWrongCed status=SUCCESS method=LoginWithWrongCred.TestLoginWithWrongCe...)</span>
-                <span class="method-start">25042 ms</span>
+                <span class="method-name">TearDownMethod([TestResult name=TestLogin status=SUCCESS method=LoginTest.TestLogin()[pri:0, instance:com.website.t...)</span>
+                <span class="method-start">19996 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">25628 ms</span>
+                <span class="method-start">20518 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
