--- a/Framework/test-output/old/Default suite/methods.html
+++ b/Framework/test-output/old/Default suite/methods.html
@@ -1,14 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c49fae">  <td>19/07/24 14:19:42</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupFile()[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">&gt;&gt;setupFile</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/07/24 14:19:43</td>   <td>627</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
-<tr bgcolor="8df37b">  <td>19/07/24 14:19:58</td>   <td>15472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TestLogin()[pri:1, instance:com.website.testcases.LoginTest@75f9eccc]">TestLogin</td> 
-  <td>main@107241811</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/07/24 14:20:09</td>   <td>27052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod(org.testng.ITestResult)[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">&lt;&lt;TearDownMethod</td> 
-<td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/07/24 14:20:10</td>   <td>27426</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.website.testcases.LoginTest@75f9eccc]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>19/07/24 15:52:54</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupFile()[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&gt;&gt;setupFile</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>19/07/24 15:52:55</td>   <td>684</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
+<tr bgcolor="8df37b">  <td>19/07/24 15:53:11</td>   <td>17131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TestLogin()[pri:1, instance:com.website.testcases.LoginTest@52aa2946]">TestLogin</td> 
+  <td>main@558922244</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>19/07/24 15:53:25</td>   <td>30886</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod(org.testng.ITestResult)[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&lt;&lt;TearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
+<tr bgcolor="8df37b">  <td>19/07/24 15:53:26</td>   <td>31346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TestLoginWithWrongCed()[pri:2, instance:com.website.testcases.LoginTest@52aa2946]">TestLoginWithWrongCed</td> 
+  <td>main@558922244</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>19/07/24 15:53:37</td>   <td>42805</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod(org.testng.ITestResult)[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&lt;&lt;TearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>19/07/24 15:53:37</td>   <td>43213</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
 </table>
